
- WL#14860: Support FIDO authentication (c-ext)
- WL#14852: Align TLS option checking across connectors
- WL#14824: Remove Python 3.6 support
- WL#14679: Allow custom class for data type conversion in Django backend
- WL#14665: SSPI Kerberos authentication for Windows (pure-python)
- BUG#33729842: Character set 'utf8mb3' support
- BUG#23338623: Add support for Decimal parsing in protocol.py
- BUG#20065830: NaN is not supported

v8.0.28
=======

- WL#14814: Remove support for TLS 1.0 and 1.1
- WL#14813: Add support for Python 3.10
- WL#14720: Support for Multi Factor authentication (pure Python)
- WL#14667: Support for Multi Factor authentication (c-ext)
- BUG#33486094: Stored value in Decimal field is returned as str on prepared pure python cursor
- BUG#33410592: Fix compiler warnings
- BUG#33409819: Fix failure when using a conversion class in CMySQLConnection
- BUG#27358941: Invalid types for params silently ignored in execute method

v8.0.27
=======

- WL#14710: Support OCI IAM authentication
- WL#14689: Fallback conversion to str for types incompatible with MySQL
- WL#14664: Allow SSPI Kerberos library usage with c-ext
- BUG#33177337: Connection with chained SSL certs fails with ssl_verify_identity
- BUG#28641350: mysqlx.result.Row objects cannot be printed directly

v8.0.26
=======

- WL#14634: Running unit tests against external server
- WL#14542: Deprecate TLS 1.0 and 1.1
- WL#14440: Support for authentication_kerberos_client authentication plugin
- WL#14306: Integrate QA tests into Connector/Python test suite
- WL#14237: Support query attributes
- BUG#32947160: Remove MySQLdb module dependency from Django backend
- BUG#32838010: Fix option files parsing with include directive
- BUG#32789076: MSI is missing required libraries to use auth_ldap_client plugin
- BUG#32778827: Raise an error if the _id is different when replacing a document
- BUG#32740486: Fix typo in docstring
- BUG#32623479: The X DevAPI returns str for binary types values